# Cataphract

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cataphract.cpp  cataphract.hpp  engine.cpp  engine.hpp  main.cpp  makefile  options.hpp  pgo.cmake  uci.cpp  uci.hpp
board/: attacks.hpp  bitboard.cpp  bitboard.h  bitboard.hpp  lines.cpp  lines.h  lines.hpp  slider.cpp  slider.hpp
board/pieces/: bishop.h  bishop.hpp  king.h  king.hpp  knight.h  knight.hpp  pawn.h  pawn.hpp  rook.h  rook.hpp  slider.cpp  slider.h  slider.hpp
eval/: accumulators.cpp  accumulators.hpp  arch.hpp  eval.hpp  nnue.cpp  nnue.hpp  phase.hpp  transposition.cpp  transposition.hpp  utils.cpp  utils.hpp
eval/simd/: avx2.cpp  avx2.hpp  avx512.cpp  avx512.hpp  scalar.cpp  scalar.hpp  simd.hpp
position/: bench.cpp  bench.hpp  cuckoo.cpp  cuckoo.hpp  fen.cpp  fen.h  fen.hpp  game.h  move.cpp  move.h  move.hpp  movegen.cpp  movegen.hpp  perft.cpp  perft.hpp  position.cpp  position.h  position.hpp  zobrist.cpp  zobrist.h  zobrist.hpp
search/: history.cpp  history.hpp  movepicker.cpp  movepicker.hpp  params.cpp  params.hpp  search.cpp  search.hpp  see.cpp  see.hpp  thread.cpp  thread.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp  transposition.cpp  transposition.hpp
